force-app/src/objects/npsp__DataImport__c.object
<CustomObject>
    <fields>
        <fullName>npsp__Contact2ImportStatus__c</fullName>
        <label>Contact2 Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2 Imported</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>NPSP Data Imports (Contact2 Imported)</relationshipLabel>
        <relationshipName>Data_Imports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Alternate_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__AlternateEmail__c</inlineHelpText>
        <label>Contact2 Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Birthdate__c</fullName>
        <inlineHelpText>Contact2.Birthdate</inlineHelpText>
        <label>Contact2 Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Firstname__c</fullName>
        <inlineHelpText>Contact2.Firstname</inlineHelpText>
        <label>Contact2 First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Home_Phone__c</fullName>
        <inlineHelpText>Contact2.HomePhone</inlineHelpText>
        <label>Contact2 Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Lastname__c</fullName>
        <inlineHelpText>Contact2.Lastname</inlineHelpText>
        <label>Contact2 Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Mobile_Phone__c</fullName>
        <inlineHelpText>Contact2.MobilePhone</inlineHelpText>
        <label>Contact2 Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Other_Phone__c</fullName>
        <inlineHelpText>Contact2.OtherPhone</inlineHelpText>
        <label>Contact2 Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Personal_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__HomeEmail__c</inlineHelpText>
        <label>Contact2 Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Preferred_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__Preferred_Email__c</inlineHelpText>
        <label>Contact2 Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Preferred_Phone__c</fullName>
        <inlineHelpText>Contact2.npe01__PreferredPhone__c</inlineHelpText>
        <label>Contact2 Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Salutation__c</fullName>
        <inlineHelpText>Contact2.Salutation</inlineHelpText>
        <label>Contact2 Salutation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Title__c</fullName>
        <inlineHelpText>Contact2.Title</inlineHelpText>
        <label>Contact2 Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Work_Email__c</fullName>
        <inlineHelpText>Contact2.npe01__WorkEmail__c</inlineHelpText>
        <label>Contact2 Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Contact2_Work_Phone__c</fullName>
        <inlineHelpText>Contact2.npe01__WorkPhone__c</inlineHelpText>
        <label>Contact2 Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__DonationCampaignImportStatus__c</fullName>
        <label>Donation Campaign Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__DonationCampaignImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Opportunity.CampaignId</inlineHelpText>
        <label>Donation Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__DonationImportStatus__c</fullName>
        <label>Donation Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__DonationImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Donation Imported</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>NPSP Data Imports (Opportunity1 Imported)</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Amount__c</fullName>
        <inlineHelpText>Opportunity.Amount</inlineHelpText>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Date__c</fullName>
        <inlineHelpText>Opportunity.CloseDate</inlineHelpText>
        <label>Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Description__c</fullName>
        <inlineHelpText>Opportunity.Description</inlineHelpText>
        <label>Donation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Donor__c</fullName>
        <description>Specifies whether the donation is an individual donation from Contact1, or an organizational donation from Account1.</description>
        <inlineHelpText>Specifies whether the donation is an individual donation from Contact1, or an organizational donation from Account1.</inlineHelpText>
        <label>Donation Donor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact1</fullName>
                </value>
                <value>
                    <fullName>Account1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Donation_Elevate_Recurring_ID__c</fullName>
        <description>The external, unique ID of the Recurring Donation in Elevate that this donation Opportunity is linked to.</description>
        <inlineHelpText>The external, unique ID of the Recurring Donation in Elevate that this donation Opportunity is linked to.</inlineHelpText>
        <label>Donation Elevate Recurring ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Honoree_Information__c</fullName>
        <description>Contact information, such as email, address, or phone the donor provided for the tribute honoree.</description>
        <inlineHelpText>Contact information, such as email, address, or phone the donor provided for the tribute honoree.</inlineHelpText>
        <label>Donation Honoree Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor.</description>
        <inlineHelpText>The honoree name as provided by the donor.</inlineHelpText>
        <label>Donation Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Member_Level__c</fullName>
        <inlineHelpText>Opportunity.npe01__Member_Level__c</inlineHelpText>
        <label>Donation Member Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Membership_End_Date__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_End_Date__c</inlineHelpText>
        <label>Donation Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Membership_Origin__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_Origin__c</inlineHelpText>
        <label>Donation Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Membership_Start_Date__c</fullName>
        <inlineHelpText>Opportunity.npe01__Membership_Start_Date__c</inlineHelpText>
        <label>Donation Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Name__c</fullName>
        <description>The donation&apos;s name.  Will be automatically generated by the system if left empty.</description>
        <inlineHelpText>Opportunity.Name</inlineHelpText>
        <label>Donation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Donation Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Notification_Preference__c</fullName>
        <description>Indicates how the notification recipient should be notified. For example, by email or phone.</description>
        <inlineHelpText>Indicates how the notification recipient should be notified. For example, by email or phone.</inlineHelpText>
        <label>Donation Notification Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Do Not Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Donation_Notification_Recipient_Email__c</fullName>
        <description>The email address for the person receiving the notification.</description>
        <inlineHelpText>The email address for the person receiving the notification.</inlineHelpText>
        <label>Donation Notification Recipient Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Notification_Recipient_Info__c</fullName>
        <description>Contact information, such as address or phone the donor provided for the notification recipient.</description>
        <inlineHelpText>Contact information, such as address or phone the donor provided for the notification recipient.</inlineHelpText>
        <label>Donation Notification Recipient Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Notification_Recipient_Name__c</fullName>
        <description>The name of the person to notify of this gift.</description>
        <inlineHelpText>The name of the person to notify of this gift.</inlineHelpText>
        <label>Donation Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Possible_Matches__c</fullName>
        <description>A comma-separated list of Ids for the first 10 possible Opportunity matches for a donation.</description>
        <inlineHelpText>A comma separated list of ID&apos;s to the first 10 possible Opportunity matches to a donation.</inlineHelpText>
        <label>Donation Possible Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Record_Type_Name__c</fullName>
        <description>The Name of the Opportunity Record Type to use for the donation.  Uses default Record Type if left blank.</description>
        <inlineHelpText>Opportunity.RecordTypeId</inlineHelpText>
        <label>Donation Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Stage__c</fullName>
        <description>The Stage to set on the Opportunity.  Will set to Closed Won if left blank.</description>
        <inlineHelpText>Opportunity.StageName</inlineHelpText>
        <label>Donation Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donation_Tribute_Type__c</fullName>
        <description>Indicates whether the donation is in honor or in memory of an individual.</description>
        <inlineHelpText>Indicates whether the donation is in honor or in memory of an individual.</inlineHelpText>
        <label>Donation Tribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Honor</fullName>
                </value>
                <value>
                    <fullName>Memorial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Donation_Type__c</fullName>
        <inlineHelpText>Opportunity.Type</inlineHelpText>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Custom_Metadata__c</fullName>
        <description>Custom metadata from Elevate Giving Pages, stored as JSON.</description>
        <inlineHelpText>Custom metadata from Elevate Giving Pages, stored as JSON.</inlineHelpText>
        <label>Elevate Custom Metadata</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_Status__c</fullName>
        <description>The transaction status shown in Elevate.</description>
        <formula>CASE(npsp__Payment_Status__c,
                &apos;PENDING&apos;,
                &apos;Pending&apos;,

                &apos;CAPTURED&apos;,
                &apos;Succeeded&apos;,

                &apos;NONRETRYABLEERROR&apos;,
                &apos;Failed&apos;,

                &apos;RETRYABLEERROR&apos;,
                &apos;Failed&apos;,

                &apos;DECLINED&apos;,
                &apos;Declined&apos;,

                &apos;REFUNDISSUED&apos;,
                &apos;Succeeded&apos;,

                &apos;SUBMITTED&apos;,
                &apos;Submitted&apos;,

                &apos;SETTLED&apos;,
                &apos;Succeeded&apos;,

                &apos;AUTHORIZED&apos;,
                &apos;Authorized&apos;,

                &apos;EXPIRED&apos;,
                &apos;Expired Authorization&apos;,

                &apos;PAYMENTPROCESSING&apos;,
                &apos;Pending&apos;,

            &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The transaction status shown in Elevate.</inlineHelpText>
        <label>Elevate Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__FailureInformation__c</fullName>
        <description>Description of what caused the Data Import record to fail to be imported.</description>
        <inlineHelpText>Description of what caused the Data Import record to fail to be imported.</inlineHelpText>
        <label>Failure Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_1_Amount__c</fullName>
        <description>The monetary amount attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The monetary amount attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 1: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_1_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The salesforce id of the GAU to be used for the first allocation.</description>
        <inlineHelpText>The salesforce id of the GAU to be used for the first allocation.</inlineHelpText>
        <label>GAU Allocation 1: GAU</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 1)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_1_Import_Status__c</fullName>
        <description>The status from attempting to insert the first GAU Allocation.</description>
        <inlineHelpText>The status from attempting to insert the first GAU Allocation.</inlineHelpText>
        <label>GAU Allocation 1: Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_1_Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the first GAU Allocation if it was successfully created.</description>
        <inlineHelpText>A lookup to the first GAU Allocation if it was successfully created.</inlineHelpText>
        <label>GAU Allocation 1: Imported</label>
        <referenceTo>npsp__Allocation__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 1)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_1_Percent__c</fullName>
        <description>The percent attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The percent attributed to the Opportunity&apos;s first GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 1: Percent</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_2_Amount__c</fullName>
        <description>The monetary amount attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The monetary amount attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 2: Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_2_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The salesforce id of the GAU to be used for the second GAU allocation.</description>
        <inlineHelpText>The salesforce id of the GAU to be used for the second GAU allocation.</inlineHelpText>
        <label>GAU Allocation 2: GAU</label>
        <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 2)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_2_Import_Status__c</fullName>
        <description>The status from attempting to insert the second GAU Allocation.</description>
        <inlineHelpText>The status from attempting to insert the second GAU Allocation.</inlineHelpText>
        <label>GAU Allocation 2: Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_2_Imported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the first GAU Allocation if it was successfully created.</description>
        <inlineHelpText>A lookup to the first GAU Allocation if it was successfully created.</inlineHelpText>
        <label>GAU Allocation 2: Imported</label>
        <referenceTo>npsp__Allocation__c</referenceTo>
        <relationshipLabel>NPSP Data Imports (GAU 2)</relationshipLabel>
        <relationshipName>NPSP_Data_Imports_GAU2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__GAU_Allocation_2_Percent__c</fullName>
        <description>The percent attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</description>
        <inlineHelpText>The percent attributed to the Opportunity&apos;s second GAU Allocation. You must use Data Import Advanced Mapping to map to this field.</inlineHelpText>
        <label>GAU Allocation 2: Percent</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>npsp__HomeAddressImportStatus__c</fullName>
        <label>Home Address Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__HomeAddressImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Address Imported</label>
        <referenceTo>npsp__Address__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Home_City__c</fullName>
        <inlineHelpText>Address.npsp__MailingCity__c</inlineHelpText>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Home_Country__c</fullName>
        <inlineHelpText>Address.npsp__MailingCountry__c</inlineHelpText>
        <label>Home Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Home_State_Province__c</fullName>
        <inlineHelpText>Address.npsp__MailingState__c</inlineHelpText>
        <label>Home State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Home_Street__c</fullName>
        <inlineHelpText>Address.npsp__MailingStreet__c</inlineHelpText>
        <label>Home Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Home_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Address.npsp__MailingPostalCode__c</inlineHelpText>
        <label>Home Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__HouseholdAccountImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household Account Imported</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Household_Phone__c</fullName>
        <inlineHelpText>Household.Phone</inlineHelpText>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__ImportedDate__c</fullName>
        <description>The date and time that the Data Import record was successfully imported.</description>
        <inlineHelpText>When the Data Import record was successfully imported.</inlineHelpText>
        <label>Imported Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__NPSP_Data_Import_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the NPSP Data Import Batch this record belongs to.</description>
        <inlineHelpText>an optional NPSP Data Import Batch this record belongs to</inlineHelpText>
        <label>NPSP Data Import Batch</label>
        <referenceTo>npsp__DataImportBatch__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity_Contact_Role_1_ImportStatus__c</fullName>
        <description>The status from attempting to insert the first Opportunity Contact Role.</description>
        <inlineHelpText>The status from attempting to insert the first Opportunity Contact Role.</inlineHelpText>
        <label>Opportunity Contact Role 1: ImportStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity_Contact_Role_1_Imported__c</fullName>
        <description>The salesforce id of the imported opportunity contact role.</description>
        <inlineHelpText>The salesforce id of the imported opportunity contact role.</inlineHelpText>
        <label>Opportunity Contact Role 1: Imported</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity_Contact_Role_1_Role__c</fullName>
        <description>The role that the Opportunity Contact Role should be created with.  For example enter &apos;Soft Credit&apos; to create a soft credit opportunity contact role.</description>
        <inlineHelpText>The role that the Opportunity Contact Role should be created with.  For example enter &apos;Soft Credit&apos; to create a soft credit opportunity contact role.</inlineHelpText>
        <label>Opportunity Contact Role 1: Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity_Contact_Role_2_ImportStatus__c</fullName>
        <description>The status from attempting to insert the second Opportunity Contact Role.</description>
        <inlineHelpText>The status from attempting to insert the second Opportunity Contact Role.</inlineHelpText>
        <label>Opportunity Contact Role 2: ImportStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity_Contact_Role_2_Imported__c</fullName>
        <description>The salesforce id of the imported opportunity contact role.</description>
        <inlineHelpText>The salesforce id of the imported opportunity contact role.</inlineHelpText>
        <label>Opportunity Contact Role 2: Imported</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity_Contact_Role_2_Role__c</fullName>
        <description>The role that the Opportunity Contact Role should be created with.  For example enter &apos;Soft Credit&apos; to create a soft credit opportunity contact role.</description>
        <inlineHelpText>The role that the Opportunity Contact Role should be created with.  For example enter &apos;Soft Credit&apos; to create a soft credit opportunity contact role.</inlineHelpText>
        <label>Opportunity Contact Role 2: Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__PaymentImportStatus__c</fullName>
        <label>Payment Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__PaymentImported__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Imported</label>
        <referenceTo>npe01__OppPayment__c</referenceTo>
        <relationshipLabel>NPSP Data Imports</relationshipLabel>
        <relationshipName>NPSP_Data_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_ACH_Code__c</fullName>
        <description>The Standard Entry Class (SEC) code used for this ACH transaction.</description>
        <inlineHelpText>The Standard Entry Class (SEC) code used for this ACH transaction.</inlineHelpText>
        <label>Payment ACH Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>npsp__Payment_ACH_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Payment_ACH_Last_4__c</fullName>
        <description>The last four digits of the bank account used for this transaction.</description>
        <inlineHelpText>The last four digits of the bank account used for this transaction.</inlineHelpText>
        <label>Payment ACH Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Authorization_Token__c</fullName>
        <description>Authorization token for a transaction.</description>
        <inlineHelpText>Authorization token for a transaction.</inlineHelpText>
        <label>Payment Authorization Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Authorized_Date__c</fullName>
        <description>The date and time the transaction was authorized.</description>
        <inlineHelpText>The date and time the transaction was authorized.</inlineHelpText>
        <label>Payment Authorized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Authorized_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</inlineHelpText>
        <label>Payment Authorized UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Expiration_Month__c</fullName>
        <description>The expiration month of the card used for this transaction.</description>
        <inlineHelpText>The expiration month of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Expiration_Year__c</fullName>
        <description>The expiration year of the card used for this transaction.</description>
        <inlineHelpText>The expiration year of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Last_4__c</fullName>
        <description>The last four digits of the card used for this transaction.</description>
        <inlineHelpText>The last four digits of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Card_Network__c</fullName>
        <description>The card network of the card used for this transaction.</description>
        <inlineHelpText>The card network of the card used for this transaction.</inlineHelpText>
        <label>Payment Card Network</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Check_Reference_Number__c</fullName>
        <inlineHelpText>Payment.npe01__Check_Reference_Number__c</inlineHelpText>
        <label>Payment Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Declined_Reason__c</fullName>
        <inlineHelpText>Provides detail about why a transaction was declined.</inlineHelpText>
        <label>Payment Elevate API Declined Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Donor_Cover_Amount__c</fullName>
        <description>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</description>
        <inlineHelpText>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</inlineHelpText>
        <label>Payment Donor Cover Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Elevate_Batch_ID__c</fullName>
        <description>The ID of a batch of payments sent to Elevate for processing.</description>
        <inlineHelpText>The ID of a batch of payments sent to Elevate for processing.</inlineHelpText>
        <label>Payment Elevate Batch ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Elevate_Created_Date__c</fullName>
        <description>The date and time the transaction was created.</description>
        <inlineHelpText>The date and time the transaction was created.</inlineHelpText>
        <label>Payment Elevate Created Date</label>
        <type>DateTime</type>
    </fields>
</CustomObject>